# powerpc.library

./: CMakeLists.txt  ldscript.lds
cmake/: sfdc.cmake
src/: doorbell.h  init.c  libstructs.h  main.c  powerpc_private.h  spinlock.h
